<resources>
    <string name="app_name" translatable="false">HyruleCompendium</string>

    <!-- Titles -->
    <string name="botw_title" translatable="false">BOTW</string>
    <string name="totk_title" translatable="false">TOTK</string>
    <string name="toolbar_title">Zelda Encyclopedia</string>
    <string name="categories_title">Categories</string>
    <string name="creatures_title">Creatures</string>
    <string name="monsters_title">Monsters</string>
    <string name="materials_title">Materials</string>
    <string name="equipments_title">Equipments</string>
    <string name="treasures_title">Treasures</string>
    <string name="fav_title">Fav</string>
    <string name="common_locations_title">Common Locations</string>
    <string name="drops_title">Droppable Items</string>
    <string name="attack_title">Attack</string>
    <string name="defense_title">Defense</string>
    <string name="effect_title">Effect</string>
    <string name="type_title">Type</string>
    <string name="cooking_effect_title">Cooking Effect</string>
    <string name="hearts_recovered_title">Hearts Recovered</string>
    <string name="fuse_attack_power_title">Fuse Attack Power</string>

    <!-- Placeholders -->
    <string name="category_title_placeholder">No category selected</string>
    <string name="name_placeholder">Name</string>
    <string name="description_placeholder">Description</string>
    <string name="common_locations_placeholder">Locations</string>
    <string name="drops_placeholder">Drops</string>
    <string name="attack_placeholder">Attack</string>
    <string name="defense_placeholder">Defense</string>
    <string name="effect_placeholder">Effect</string>
    <string name="type_placeholder">Type</string>
    <string name="cooking_effect_placeholder">Cooking Effect</string>
    <string name="hearts_recovered_placeholder">Hearts Recovered</string>
    <string name="fuse_attack_power_placeholder">Fuse Attack Power</string>

    <!-- Texts -->
    <string name="none_text">None</string>

    <!-- Toasts -->
    <string name="get_all_entries_no_result_toast">No result found</string>
</resources>